<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:id="@+id/homeScreenFragment"
        android:icon = "@drawable/ic_baseline_home_24"
        android:title="@string/home" />

    <item
        android:id="@+id/currentWeatherDetailedFragment"
        android:icon = "@drawable/ic_baseline_today_24"
        android:title="@string/today"/>
    <item
        android:id="@+id/weeklyListWeatherFragment"
        android:icon = "@drawable/ic_baseline_calendar_view_week_24"
        android:title="@string/week"/>
    <item
        android:id="@+id/alertsFragment"
        android:icon = "@drawable/ic_baseline_notifications_24"
        android:title="@string/alarm"/>

    <item
        android:id="@+id/settingsFragment"
        android:icon = "@drawable/ic_baseline_settings_24"
        android:title="@string/settings"
        />

</menu>