<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:background="@drawable/sharp_border"
    android:orientation="vertical"
    android:padding="8dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/adapter_background_color"
        android:padding="8dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout_daily_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/adapter_background_color">

            <TextView
                android:id="@+id/textView_weekly_wind"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/roboto"
                android:gravity="center"
                android:textColor="@color/font_color"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageView_wind_daily"
                app:layout_constraintTop_toBottomOf="@+id/textView_weekly_description"
                app:layout_constraintVertical_bias="0.692"
                tools:text="13 km/h" />

            <TextView
                android:id="@+id/textView_weekly_cloudiness"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginBottom="12dp"
                android:fontFamily="@font/roboto"
                android:gravity="center"
                android:textAlignment="center"
                android:textColor="@color/font_color"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageView_cloudiness_daily"
                tools:text="99%" />

            <ImageView
                android:id="@+id/weekly_weather_image"
                android:layout_width="60dp"
                android:layout_height="55dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_baseline_wb_sunny_24"
                tools:ignore="ImageContrastCheck"
                android:contentDescription="@string/picture_describing_weather_for_following_days" />

            <TextView
                android:id="@+id/textView_weekly_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:paddingStart="3dp"
                android:paddingEnd="3dp"
                android:textColor="@color/font_color"
                app:layout_constraintBottom_toBottomOf="@+id/textView_temperature_weekly"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.068"
                app:layout_constraintStart_toEndOf="@+id/textView_temperature_weekly"
                app:layout_constraintTop_toTopOf="@+id/textView_temperature_weekly"
                app:layout_constraintVertical_bias="0.0"
                tools:text="Here description" />

            <TextView
                android:id="@+id/textView_temperature_weekly"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/roboto"
                android:gravity="center|center_vertical"
                android:paddingStart="12dp"
                android:textAlignment="viewStart"
                android:textColor="@color/font_color"
                android:textSize="17sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/weekly_weather_image"
                app:layout_constraintTop_toBottomOf="@+id/weekly_weather_date"
                tools:ignore="RtlCompat,RtlSymmetry"
                tools:text="11°" />

            <TextView
                android:id="@+id/weekly_weather_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/roboto"
                android:paddingStart="12dp"
                android:textAlignment="textStart"
                android:textColor="@color/font_color"
                app:layout_constraintStart_toStartOf="@+id/textView_temperature_weekly"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="RtlSymmetry,SpeakableTextPresentCheck"
                tools:text="pon. 03.01" />

            <ImageView
                android:id="@+id/ImageView_humidity"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/textView_temperature_weekly"
                app:layout_constraintTop_toBottomOf="@+id/textView_temperature_weekly"
                app:layout_constraintVertical_bias="0.0"
                app:srcCompat="@drawable/ic_singledrop"
                android:contentDescription="@string/humidity_image" />

            <TextView
                android:id="@+id/textView_weekly_humidity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="12dp"
                android:fontFamily="@font/roboto"
                android:gravity="center"
                android:textAlignment="center"
                android:textColor="@color/font_color"
                android:textStyle="normal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/ImageView_humidity"
                tools:text="11%" />

            <ImageView
                android:id="@+id/imageView_cloudiness_daily"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_marginStart="16dp"
                app:layout_constraintStart_toEndOf="@+id/textView_weekly_humidity"
                app:layout_constraintTop_toTopOf="@+id/ImageView_humidity"
                app:srcCompat="@drawable/ic_cloud"
                android:contentDescription="@string/cloud_image" />

            <ImageView
                android:id="@+id/imageView_wind_daily"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintBottom_toBottomOf="@+id/imageView_cloudiness_daily"
                app:layout_constraintStart_toEndOf="@+id/textView_weekly_cloudiness"
                app:layout_constraintTop_toBottomOf="@+id/textView_weekly_description"
                app:layout_constraintVertical_bias="1.0"
                app:srcCompat="@drawable/ic_wind"
                android:contentDescription="@string/wind_image" />

            <ImageView
                android:id="@+id/imageView_arrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView_weekly_wind"
                app:srcCompat="@drawable/ic_baseline_keyboard_arrow_down_24"
                android:contentDescription="@string/arrow_down_image" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/expandableLayout_daily"
        android:layout_width="379dp"
        android:layout_height="127dp">

        <TextView
            android:id="@+id/textView_feels_like"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="64dp"
            android:textColor="@color/font_color"
            app:layout_constraintBottom_toBottomOf="@+id/textView_description"
            app:layout_constraintStart_toEndOf="@+id/textView_description"
            app:layout_constraintTop_toTopOf="@+id/textView_description"
            app:layout_constraintVertical_bias="0.0"
            tools:text="TextView" />

        <TextView
            android:id="@+id/textView_daily_precipitation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/font_color"
            app:layout_constraintBottom_toBottomOf="@+id/textView_description2"
            app:layout_constraintStart_toStartOf="@+id/textView_feels_like"
            app:layout_constraintTop_toTopOf="@+id/textView_description2"
            tools:text="TextView" />

        <TextView
            android:id="@+id/textView_description4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/roboto"
            android:text="@string/pressure"
            android:textColor="@color/font_color"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_description3" />

        <TextView
            android:id="@+id/textView_description3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/roboto"
            android:text="@string/uv_index"
            android:textColor="@color/font_color"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_description2" />

        <TextView
            android:id="@+id/textView_description2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/roboto"
            android:text="@string/precipitation"
            android:textColor="@color/font_color"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_description" />

        <TextView
            android:id="@+id/textView_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/roboto"
            android:text="@string/feels_like"
            android:textColor="@color/font_color"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView_uv_index"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/font_color"
            app:layout_constraintBottom_toBottomOf="@+id/textView_description3"
            app:layout_constraintStart_toStartOf="@+id/textView_daily_precipitation"
            app:layout_constraintTop_toTopOf="@+id/textView_description3"
            tools:text="TextView" />

        <TextView
            android:id="@+id/textView_pressure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/font_color"
            app:layout_constraintBottom_toBottomOf="@+id/textView_description4"
            app:layout_constraintStart_toStartOf="@+id/textView_uv_index"
            app:layout_constraintTop_toTopOf="@+id/textView_description4"
            tools:text="TextView" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>

