<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:background="@drawable/sharp_border"
    android:orientation="vertical"
    android:padding="8dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/adapter_background_color"
        android:padding="8dp">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/adapter_background_color">

            <TextView
                android:id="@+id/textView_end_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/alert_end"
                android:textColor="@color/font_color"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView_start_time" />


            <ImageView

                android:id="@+id/imageView"
                android:layout_width="111dp"
                android:layout_height="81dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                app:srcCompat="@drawable/ic_baseline_priority_high_24"
                android:contentDescription="@string/exclamation_mark" />

            <TextView
                android:id="@+id/textView_start_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/start"
                android:textColor="@color/font_color"
                android:textColorHint="@color/font_color"
                app:layout_constraintBottom_toTopOf="@+id/textView_end_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView_event_short_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:gravity="center_vertical"
                android:text="@string/alert_event"
                android:textAlignment="viewStart"
                android:textColor="@color/font_color"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/imageView"
                app:layout_constraintStart_toStartOf="@+id/textView_end_text"
                app:layout_constraintTop_toTopOf="@+id/imageView"
                app:layout_constraintVertical_bias="1.0"
                tools:ignore="RtlCompat" />

            <TextView
                android:id="@+id/textView_alert_start_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/font_color"
                app:layout_constraintBottom_toBottomOf="@+id/textView_start_time"
                app:layout_constraintStart_toEndOf="@+id/textView_start_time"
                app:layout_constraintTop_toTopOf="@+id/textView_start_time"
                tools:text="TextView" />

            <TextView
                android:id="@+id/textView_alert_end_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/font_color"
                android:textColorHint="@color/font_color"
                app:layout_constraintBottom_toBottomOf="@+id/textView_end_text"
                app:layout_constraintStart_toEndOf="@+id/textView_end_text"
                app:layout_constraintTop_toTopOf="@+id/textView_end_text"
                tools:text="TextView" />


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/expandableLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="100dp"
                android:layout_marginEnd="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/textView_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:padding="@dimen/margin_8"
                    android:textColor="@color/font_color"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="XXX" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>